--- a/master_thesis/Makefile
+++ b/master_thesis/Makefile
@@ -1,6 +1,6 @@
 
 master_thesis.pdf: master_thesis.tex ../literature.bib ../macros.tex Makefile $(wildcard sections/*.tex) $(wildcard img/*.tex)
-	   			   latexmk -pdf $<
+	   			   latexmk -pdf --shell-escape $<
 
 clean:
 		rm -rf p.pdf *.out *.bbl *.log *.blg *.aux *.bcf *.fls *.loa \
